# wg14_signals

./: .gitmodules  AGENTS.md  CMakeLists.txt  Doxyfile  Readme.md  Readme_8md.html  _readme_8md.html  annotated.html  annotated_dup.js  classes.html  config_8h.html  config_8h.js  config_8h_source.html  current__thread__id_8h.html  current__thread__id_8h_source.html  dir_2c055be1786a4e55d30495603f0570a8.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen_crawl.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  graph_legend.html  index.html  index.js  menudata.js  navtreedata.js  navtreeindex0.js  structstdc__siginfo-members.html  structstdc__siginfo.html  structstdc__siginfo.js  structstdc__siginfo__coll__graph.map  structstdc__siginfo__coll__graph.md5  structthrd__raised__signal__info-members.html  structthrd__raised__signal__info.html  (+14 more)
.github/workflows/: ci.yml
cmake/: sanitize-toolchain.cmake  toolchain-windows-mingw.cmake
include/wg14_signals/: async_signal_safe_tls.h  config.h  current_thread_id.h  thrd_signal_handle.h  tss_async_signal_safe.h
include/wg14_signals/detail/impl/: current_thread_id.c.ipp  linked_list.h  lock_unlock.h  sigfence_force_escaped.c.ipp  thrd_signal_handle_common.ipp.ipp  thrd_signal_handle_posix.c.ipp  thrd_signal_handle_windows.c.ipp  thread_atexit.cpp.ipp  thread_atexit.h  tss_async_signal_safe.c.ipp
search/: all_10.js  all_11.js  all_12.js  all_13.js  all_15.js  all_16.js  all_4.js  all_8.js  all_9.js  all_b.js  all_c.js  classes_0.js  classes_1.js  defines_0.js  defines_1.js  enums_0.js  enumvalues_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  pages_10.js  pages_11.js  pages_12.js  pages_14.js  pages_15.js  pages_4.js  pages_5.js  pages_6.js  pages_7.js  pages_a.js  pages_d.js  pages_f.js  searchdata.js  typedefs_0.js  typedefs_1.js  variables_0.js  variables_3.js  variables_4.js  variables_5.js  (+3 more)
src/wg14_signals/: async_signal_safe_tls.c  current_thread_id.c  lock_unlock.h  sigfence_force_escaped.c  thrd_signal_handle_common.ipp  thrd_signal_handle_posix.c  thrd_signal_handle_windows.c  thread_atexit.cpp  tss_async_signal_safe.c
test/: CMakeLists.txt  async_signal_safe_tls_test.c  benchmark_async_signal_safe_tls_test.c  benchmark_thrd_signal_handle_test.c  header_only_test.cpp  header_only_test1.cpp  header_only_test2.cpp  test_common.h  thrd_sigfpe_test.c  thrd_signal_handle_test.c  ticks_clock.h
